--- a/index.html
+++ b/index.html
@@ -15,11 +15,29 @@
         </ul>
     </nav>
     <header id="header">
-        <h1>Architect & Civil Engineer</h1>
+        <h1>Jorge Matos</h1>
+        <h2>Arquiteto e Engenheiro Civil</h2>
     </header>
     <section id="about-me">
         <h2>About Me</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet nulla auctor, vestibulum magna sed, convallis ex.</p>
+        <p>asdasdfa</p>
+        <p>asdasdfasdfafdg</p>
+        <p>asdfasgfsdgdsfghs</p>
+        <p>asdfasdgafdgfdhdfg</p>
+        <p>asdfasdgafdgfdhdfg</p>
+        <p>asdfasdgafdgfdhdfg</p>
+        <p>asdfasdgafdgfdhdfg</p>
+        <p>asdfasdgafdgfdhdfg</p>
+        <p>asdfasdgafdgfdhdfg</p>
+        <p>asdfasdgafdgfdhdfg</p>
+        <p>asdfasdgafdgfdhdfg</p>
+        <p>asdfasdgafdgfdhdfg</p>
+        <p>asdfasdgafdgfdhdfg</p>
+        <p>asdfasdgafdgfdhdfg</p>
+        <p>asdfasdgafdgfdhdfg</p>
+        <p>asdfasdgafdgfdhdfg</p>
+        <p>asdfasdgafdgfdhdfg</p>
     </section>
     <section id="projects">
         <h2>Projects</h2>
