update do site com politica de privacidade

--- a/index.html
+++ b/index.html
@@ -135,6 +135,35 @@
                     <li><a href="#">LinkedIn</a></li>
                 </ul>
             </div>
+            <a id="terms-button" >Politica de Privacidade</a>
+            <div id="terms-popup-overlay" class="overlay"></div>
+            <div id="terms-popup">
+                <h3>Politica de Privacidade</h3>
+                <p>Esta página pessoal respeita a sua privacidade e não coleta dados pessoais. As unicas 
+                    informações disponiveis para contato, são o telefone e o email diponibilizados 
+                    nesta pagina </p>
+                <p>1. Coleta de informações: <br>
+                    Nenhuma informação pessoal e coletada automaticamente nesta página pessoal. 
+                A única forma de obter as informações é caso entre em contato, voluntariamente, via email ou telefone
+                </p>
+                <p>2. Uso de informacoes: <br>
+                    Qualquer informação fornecida voluntariamente (como seu nome e e-mail em uma mensagem) 
+                    será usada apenas para responder à sua solicitação e não será compartilhada com terceiros.
+                </p>
+                <p>3. Segurança de informacoes: <br>
+                    Se você fornecer informações de contato, 
+                    elas serão mantidas em segurança e usadas apenas para a finalidade específica de comunicação.
+                </p>
+                <p>4. Alterações: <br>
+                    Esta política pode ser atualizada periodicamente.
+                    Recomendo que você revise esta página para estar ciente de qualquer alteração.
+                </p>
+                <p>5. Contato: <br>
+                    Se vocé tiver alguma duvida ou sugestão sobre nossa politica de privacidade, 
+                    por favor, entre em contato conosco em [email de contato].
+                </p>
+                <button id="close-button">Close</button>
+            </div>
         </div>
     </footer>
     <script src="index.js"></script>
