direcionar morada para mapa

--- a/index.html
+++ b/index.html
@@ -21,23 +21,17 @@
     <section id="about-me">
         <h2>About Me</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet nulla auctor, vestibulum magna sed, convallis ex.</p>
-        <p>asdasdfa</p>
-        <p>asdasdfasdfafdg</p>
-        <p>asdfasgfsdgdsfghs</p>
-        <p>asdfasdgafdgfdhdfg</p>
-        <p>asdfasdgafdgfdhdfg</p>
-        <p>asdfasdgafdgfdhdfg</p>
-        <p>asdfasdgafdgfdhdfg</p>
-        <p>asdfasdgafdgfdhdfg</p>
-        <p>asdfasdgafdgfdhdfg</p>
-        <p>asdfasdgafdgfdhdfg</p>
-        <p>asdfasdgafdgfdhdfg</p>
-        <p>asdfasdgafdgfdhdfg</p>
-        <p>asdfasdgafdgfdhdfg</p>
-        <p>asdfasdgafdgfdhdfg</p>
-        <p>asdfasdgafdgfdhdfg</p>
-        <p>asdfasdgafdgfdhdfg</p>
-        <p>asdfasdgafdgfdhdfg</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet nulla auctor, vestibulum magna sed, convallis ex.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet nulla auctor, vestibulum magna sed, convallis ex.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet nulla auctor, vestibulum magna sed, convallis ex.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet nulla auctor, vestibulum magna sed, convallis ex.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet nulla auctor, vestibulum magna sed, convallis ex.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet nulla auctor, vestibulum magna sed, convallis ex.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet nulla auctor, vestibulum magna sed, convallis ex.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet nulla auctor, vestibulum magna sed, convallis ex.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet nulla auctor, vestibulum magna sed, convallis ex.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet nulla auctor, vestibulum magna sed, convallis ex.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet nulla auctor, vestibulum magna sed, convallis ex.</p>
     </section>
     <section id="projects">
         <h2>Projects</h2>
@@ -117,23 +111,18 @@
         <div class="footer-content">
             <div class="footer-item"> 
                 <span> Phone: </span>
-                <span><a href="#">555-555-5555</a></span>
+                <span><a href="#">963462375</a></span>
             </div>
             <div class="footer-item">
                 <span> Email: </span>
-                <span><a href="#">[example@example.com](mailto:example@example.com)</a></span>
+                <span>
+                    <a href="#">as1576101@sapo.pt</a><br>
+                    <a href="#">as1576101@gmail.com</a>
+                </span>
             </div>
             <div class="footer-item">
                 <span> Address: </span>
-                <span><a href="#">123 Main St, City, Country</a></span>
-            </div>
-            <div class="footer-item">
-                <span> Social Media: </span>
-                <ul>
-                    <li><a href="#">Facebook</a></li>
-                    <li><a href="#">Instagram</a></li>
-                    <li><a href="#">LinkedIn</a></li>
-                </ul>
+                <span><a href="https://www.google.pt/maps/place/R.+de+31+de+Janeiro+86,+4490-533+Póvoa+de+Varzim/@41.3757668,-8.7638083,17z/data=!3m1!4b1!4m6!3m5!1s0xd244690480c4d9d:0x3a952189505c3e05!8m2!3d41.3757628!4d-8.761228!16s%2Fg%2F11c5qf5xz7?hl=pt-PT&entry=ttu&g_ep=EgoyMDI1MDIyNi4xIKXMDSoASAFQAw%3D%3D" target="_blank">Rua 31 de Janeiro, 86/RC,<br> 4490-533 Povoa de Varzim</a></span>
             </div>
             <a id="terms-button" >Politica de Privacidade</a>
             <div id="terms-popup-overlay" class="overlay"></div>
