add phone feature

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <div class="footer-content">
             <div class="footer-item"> 
                 <span> Phone: </span>
-                <span><a href="#">963462375</a></span>
+                <span><a href="tel:+351932771690" target="_blank">963462375</a></span>
             </div>
             <div class="footer-item">
                 <span> Email: </span>
