--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Architect & Civil Engineer</title>
     <link rel="stylesheet" href="index.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <nav id="navbar">
+    <nav class="navbar nav-expand-md navbar-light">
         <ul>
             <li><a href="#about-me">About Me</a></li>
             <li><a href="#projects">Projects</a></li>
@@ -19,19 +20,19 @@
         <h2>Arquiteto e Engenheiro Civil</h2>
     </header>
     <section id="about-me">
-        <h2>About Me</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet nulla auctor, vestibulum magna sed, convallis ex.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet nulla auctor, vestibulum magna sed, convallis ex.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet nulla auctor, vestibulum magna sed, convallis ex.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet nulla auctor, vestibulum magna sed, convallis ex.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet nulla auctor, vestibulum magna sed, convallis ex.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet nulla auctor, vestibulum magna sed, convallis ex.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet nulla auctor, vestibulum magna sed, convallis ex.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet nulla auctor, vestibulum magna sed, convallis ex.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet nulla auctor, vestibulum magna sed, convallis ex.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet nulla auctor, vestibulum magna sed, convallis ex.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet nulla auctor, vestibulum magna sed, convallis ex.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet nulla auctor, vestibulum magna sed, convallis ex.</p>
+        <h2>Bem-vindo</h2>
+        <p>Meu nome é Jorge Matos, sou Arquiteto e Engenheiro Civil apaixonado por criar espaços que combinem
+            funcionalidade, sustenibilidade e beleza. Com mais de [...] anos de experiência,
+            no setor, tenho trabalhado em projetos de infraestrutura, 
+            edificações e urbanismo, sempre buscando a melhor solução para os clientes e a comunidade.
+        </p>
+        <p>
+            Formado em Engenharia Civil e Arquitetura pela Universidade [...],
+            sempre fui fascinado pela forma como os espaços podem afetar o nosso quotidiano.
+            Acredito que a arquitetura pode ser uma ferramenta poderosa para criar ambientes
+            que refletem a identidade e a cultura de uma comunidade, proporcionando uma experiência 
+            unica e memória.
+        </p>
     </section>
     <section id="projects">
         <h2>Projects</h2>
@@ -41,9 +42,9 @@
             <button class="project-button" id="project-button3">Project3</button>
         </div>
         <div class="carousel-container">
-            <div class="carousel" id="carousel-1">
+            <div class="carousel" id="carousel-1" style="display: block;">
                 <div class="carousel-item active">
-                    <img src="./assets/building1.jpg" alt="Project 1">
+                    <img src="./assets/building1.jpg" alt="Project 1" class="img-fluid">
                         <div class="description">
                             <h3>Image 1</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -51,14 +52,14 @@
                 </div>
             
                 <div class="carousel-item">
-                    <img src="./assets/building2.jpg" alt="Project 2">
+                    <img src="./assets/building2.jpg" alt="Project 2" class="img-fluid">
                         <div class="description">
                             <h3>Image 2</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                         </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./assets/building3.jpg" alt="Project 3">
+                    <img src="./assets/building3.jpg" alt="Project 3" class="img-fluid">
                         <div class="description">
                             <h3>Image 3</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -67,14 +68,14 @@
             </div>
             <div class="carousel" id="carousel-2" style="display: none;">
                 <div class="carousel-item active">
-                    <img src="./assets/building4.jpg" alt="Project 4">
+                    <img src="./assets/building4.jpg" alt="Project 4" class="img-fluid">
                         <div class="description">
                             <h3>Image 4</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                         </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./assets/building5.jpg" alt="Project 5">
+                    <img src="./assets/building5.jpg" alt="Project 5" class="img-fluid">
                         <div class="description">
                             <h3>Image 5</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -83,14 +84,14 @@
             </div>
             <div class="carousel" id="carousel-3" style="display: none;">
                 <div class="carousel-item active">
-                    <img src="./assets/building6.jpg" alt="Project 6">
+                    <img src="./assets/building6.jpg" alt="Project 6" class="img-fluid">
                         <div class="description">
                             <h3>Image 6</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                         </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./assets/building7.jpg" alt="Project 7">
+                    <img src="./assets/building7.jpg" alt="Project 7" class="img-fluid">
                         <div class="description">
                             <h3>Image 7</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -107,21 +108,21 @@
             </button>
         </div>
     </section>
-    <footer id="contact">
-        <div class="footer-content">
-            <div class="footer-item"> 
-                <span> Phone: </span>
-                <span><a href="tel:+351932771690" target="_blank">963462375</a></span>
+    <footer class="contact footer-fluid container-fluid text-center" id="contact">
+        <div class="footer-content row">
+            <div class="footer-item col-sm-"> 
+                <span> Telemovel: </span>
+                <span><a href="tel:+351963462375" target="_blank" class="text-sm">963462375</a></span>
             </div>
-            <div class="footer-item">
+            <div class="footer-item col-sm-5">
                 <span> Email: </span>
                 <span>
                     <a href="#">as1576101@sapo.pt</a><br>
                     <a href="#">as1576101@gmail.com</a>
                 </span>
             </div>
-            <div class="footer-item">
-                <span> Address: </span>
+            <div class="footer-item col-sm-5">
+                <span> Morada: </span>
                 <span><a href="https://www.google.pt/maps/place/R.+de+31+de+Janeiro+86,+4490-533+Póvoa+de+Varzim/@41.3757668,-8.7638083,17z/data=!3m1!4b1!4m6!3m5!1s0xd244690480c4d9d:0x3a952189505c3e05!8m2!3d41.3757628!4d-8.761228!16s%2Fg%2F11c5qf5xz7?hl=pt-PT&entry=ttu&g_ep=EgoyMDI1MDIyNi4xIKXMDSoASAFQAw%3D%3D" target="_blank">Rua 31 de Janeiro, 86/RC,<br> 4490-533 Povoa de Varzim</a></span>
             </div>
             <a id="terms-button" >Politica de Privacidade</a>
@@ -156,5 +157,6 @@
         </div>
     </footer>
     <script src="index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
