responsiveness of terms and conditions

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <nav class="navbar nav-expand-md navbar-light">
         <ul>
-            <li><a href="#about-me">About Me</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#about-me">Sobre Mim</a></li>
+            <li><a href="#projects">Projetos</a></li>
+            <li><a href="#contact">Contatos</a></li>
         </ul>
     </nav>
     <header id="header">
@@ -117,8 +117,8 @@
             <div class="footer-item col-sm-5">
                 <span> Email: </span>
                 <span>
-                    <a href="#">as1576101@sapo.pt</a><br>
-                    <a href="#">as1576101@gmail.com</a>
+                    <a href="mailto:as1576101@sapo.pt" target="_blank">as1576101@sapo.pt</a><br>
+                    <a href="mailto:as1576101@gmail.com" target="_blank">as1576101@gmail.com</a>
                 </span>
             </div>
             <div class="footer-item col-sm-5">
@@ -150,7 +150,7 @@
                 </p>
                 <p>5. Contato: <br>
                     Se vocé tiver alguma duvida ou sugestão sobre nossa politica de privacidade, 
-                    por favor, entre em contato conosco em [email de contato].
+                    por favor, entre em contato conosco em as1576101@sapo.pt ou as1576101@gmail.com.
                 </p>
                 <button id="close-button">Close</button>
             </div>
